--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -16,12 +16,14 @@
                         <div class="navbar-nav">
                             <a class="nav-link nav-link-text" style="color: orange;" href="/user/<%= profile %>">Profile</a>
                         </div>
+                        <a href="/logout" class="btn">Logout</a>
                     </div>
                 </div>
             </nav>
         </header>
 
         <main>
+            <h2>Ez az osszes kerdes oldala. Ezen belul lehet kategoriakent szurni</h2>
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-2">
