--- a/views/answer.ejs
+++ b/views/answer.ejs
@@ -19,6 +19,7 @@
                             <a class="nav-link nav-link-text" style="color: orange;" href="/question">Jump to
                                 questions</a>
                         </div>
+                        <a href="/logout" class="btn">Logout</a>
                     </div>
                 </div>
             </nav>
@@ -33,10 +34,10 @@
                 <div class="question">
                         <h1><%= question.title %></h1>
                     </div>
-                <div class="question">
+                
                     <textarea rows="2" name="response" id="response" cols="100"
                         form="qform"></textarea>
-                </div>
+                
 
 
                 <div>
