--- a/views/user_questions.ejs
+++ b/views/user_questions.ejs
@@ -17,12 +17,15 @@
                             <a class="nav-link nav-link-text" style="color: orange;" href="/question">Jump to
                                 questions</a>
                         </div>
+                        <a href="/logout" class="btn">Logout</a>
                     </div>
                 </div>
             </nav>
         </header>
 
         <main>
+            <h2>Ez a profilodon belul az altalad feltett, vagy megvaloszolt kerdeseid</h2>
+            <button><a href="/user/<%= user._id %>/delete">DELETE PROFILE</a></button>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-2 col-md-2 col-lg-2">
@@ -39,12 +42,19 @@
                     <div class="col-sm-10 col-lg-8 col-md-8">
                         <% question.forEach(function(item){ %>
                         <div><a href="/question/<%= item._id %>/details"><%= item.title %></a>
+
+                            <% if (typeof myQ != "undefined") { %>
+
+                            <button class="btn btn-success"><a href="/question/<%= item._id %>/edit"></a></button>
+                            <button class="btn btn-danger"><a href="/question/<%= item._id %>/delete"></a></button>
+
+                            <% } %>
                         </div>
                         <% }); %>
 
-                    </div>
+                        </div>
 
-                </div>
+                    </div>
         </main>
     </div>
 </div>
