--- a/static/css/questions.css
+++ b/static/css/questions.css
@@ -13,8 +13,16 @@ html, body {
     font-weight: bold;
 }
 
+.btn-warning {
+    padding: 5px;
+}
+
 main {
-    margin-top: 200px;
+    margin-top: 100px;
+}
+
+.categories {
+    background: rgb(243, 216, 180);
 }
 
 .row > div > div {
@@ -28,6 +36,14 @@ main {
     border-bottom: 1px solid black;
 }
 
+.question-list {
+    background: rgb(233, 224, 200);
+}
+
+h2 {
+    margin-bottom: 30px;
+    text-align: center;
+}
 
 .row a {
     color: inherit;
