--- a/views/answer.ejs
+++ b/views/answer.ejs
@@ -19,7 +19,7 @@
                             <a class="nav-link nav-link-text" style="color: orange;" href="/question">Jump to
                                 questions</a>
                         </div>
-                        <a href="/logout" class="btn">Logout</a>
+                        <button class="btn btn-warning"><a href="/logout">Logout</a></button>
                     </div>
                 </div>
             </nav>
@@ -27,24 +27,19 @@
 
         <main>
             <div class="container text-center">
-                
+
                 <form method="POST" id="qform">
 
                 </form>
                 <div class="question">
-                        <h1><%= question.title %></h1>
-                    </div>
-                
-                    <textarea rows="2" name="response" id="response" cols="100"
-                        form="qform"></textarea>
-                
+                    <h1><%= question.title %></h1>
+                </div>
 
+                <textarea rows="2" name="response" id="response" cols="100" form="qform"></textarea>
 
                 <div>
                     <button class="btn btn-secondary" form="qform" type="submit">Send</button>
                 </div>
-
-
         </main>
     </div>
 
